# SSB-Server

./: .gitignore  Dockerfile  LICENSE  docker-compose.db.yml  docker-compose.yml  loki-config.yml  manage.py  pyproject.toml  pytest.ini
.github/workflows/: cd.yml  ci.yml  codeql.yml  compose-ci.yml  develop-cd.yml  python3-ci.yml
SSB_Server/: asgi.py  settings.py  urls.py  wsgi.py
auth/: serializers.py  urls.py  views.py
config/: settings.py  urls.py  wsgi.py
config/settings/: base.py  prod.py  test.py
data/global/: 1260  1262  2671  pg_control  pg_internal.init
data/pg_stat/: pgstat.stat
infra/compose/: docker-compose.db.yml  docker-compose.prod.yml
infra/docker/: Dockerfile
infra/nginx/: default.conf
nginx/: default.conf  grafana.conf  web.conf
src/: pytest.ini
src/chain/: langchain.py
src/chat/: admin.py  consumer.py  consumers.py  exception.py  exceptions.py  models.py  routing.py  serializers.py  urls.py  views.py
src/core/: asgi.py  exception.py  settings.py  urls.py
src/diet/: admin.py  models.py  serializers.py  urls.py  views.py
src/exercise/: admin.py  models.py  serializers.py  urls.py  views.py
src/food/: models.py  serializer.py  urls.py  views.py
src/friend/: admin.py  exception.py  models.py  serializer.py  urls.py  views.py
src/routine/: admin.py  exception.py  models.py  serializers.py  urls.py  views.py
src/storage/: exception.py  s3.py  serializer.py  urls.py  views.py
src/test/: conftest.py  test_health_check_api.py  test_signin_api.py  test_signup_api.py  testconf.py  utils.py
src/user/: admin.py  models.py  (+5 more)
test/: test_test.py
user/: models.py  tests.py
(+68 files in other folders)
